--- a/css/style.css
+++ b/css/style.css
@@ -1,304 +1,623 @@
+/* ============================================================ */
+/* Base */
+/* ============================================================ */
+html, body {
+  height: 100%; }
+
 body {
-  font-size: 16px; 
-}
+  background: #FEFEFE;
+  color: #424242;
+  font-family: "Open Sans", arial, sans-serif;
+  font-size: 18px; }
 
-/* Custom container */
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 20px;
+  text-transform: none; }
 
-.container-narrow {
-  margin: 0 auto;
-  max-width: 700px; }
+h1 {
+  font-size: 26px; }
 
-.container-narrow > hr {
-  margin: 30px 0; }
+h2 {
+  font-size: 24px; }
 
-.navbar .nav {
-  float: right; }
+h3 {
+  font-size: 20px;
+  margin-bottom: 20px; }
 
-figure.full img {
-  width: 100%;
-  max-width: 100%;
-  height: auto;  
-}
+h4 {
+  font-size: 18px;
+  margin-bottom: 18px; }
 
-figure.medium
-{
-    width:400px;
-    margin-top:30px;
-    margin-bottom:30px;            
-    margin-left: auto;
-    margin-right: auto;    
-}
+h5 {
+  font-size: 16px;
+  margin-bottom: 15px; }
 
-figure.large
-{
-    width:500px;
-    margin-top:30px;
-    margin-bottom:30px;            
-    margin-left: auto;
-    margin-right: auto;    
-}
-
-figure.large img {
-    width:500px; 
-    height: auto;
-}
-
-figcaption
-{
-    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    background-color: #EFEFEF;    
-    font-size: 90%;        
-    margin-left: 1%;
-    padding-left: 4%;
-    padding-right: 4%;
-    text-align: justify;
-    display: block;
-}
-
-footer { 
- position: relative;
- z-index: 10; 
- line-height: normal;
- margin-top: 10px; 
- font-size: 0.6em;
- text-transform: uppercase;
- font-family: 'Liberation Sans', Helvetica, sans-serif; 
- padding-top: 2em; 
- text-align: center;
-}
-
-.content h1 {
-  font-family: Philosopher, serif;
-  color: #3F3F3F;
-  font-size: 1.8em;
-  text-align: center; 
-  margin-bottom: 40px;
-}
-
-#logo {
-  width: 80px;
-  margin: auto;
-}
-
-#logo a {
-  border: none;
-}
-
-#navbar-inner {
-  min-height: 40px;
-  padding-left: 10px;
-  padding-right: 10px;
-  background-color: white;
-  margin: auto;
-  max-width: 980px;
-  border-bottom: 1px solid #989898;
-}
-
-.container {  
-  margin: 0 auto;
-  max-width: 960px;
-  margin-top: 5%;
-}
-
-.row-fluid .span12 ul .posts {
-  margin: 0 0 10px 0;
-}
-
-.posts {
-  text-align: center;
-  padding-top: 5%;
-}
-
-.posts li {  
-  line-height: 90%;
-  list-style: none;
-}
-.posts li p {
-  margin-bottom: 25px;
-}
-
-.posts span {
-  float: right;
-  text-transform: uppercase;
-  font-size: 0.70em;
-  color: #777777;
-}
-
-.post {
-  margin: auto;
-  padding-bottom: 20px;
-  background: #fff;
-  border-bottom: 1px solid #d5d5d5;
-  max-width: 700px;
-}
-
-.post h2 {
-  font-size: 25px;
-  line-height: 50px;
-  margin: 25px 0;
-}
+h6 {
+  font-size: 14px;
+  margin-bottom: 12px; }
 
 p {
-  line-height: 25px;
+  line-height: 1.8;
+  margin: 0 0 30px; }
+
+a {
+  color: #F03838;
+  text-decoration: none; }
+
+ul, ol {
+  list-style-position: inside;
+  line-height: 1.4;
   margin: 0 0 20px;
-}
-
-.post .content {
-  text-align: left;
-  margin-top: 3em;
-  font-family: "Liberation Serif", "Palatino Linotype", Georgia, serif;
-  font-size: 18px;
-}
-
-.post .content li {
-  line-height: 150%;
-  list-style: square;
-}
-
-.post .content ol {
-  margin-bottom: 25px;
-}
-
-.post-header {
-  padding: 20px 40px 20px 40px;
-  text-align: center;
-}
-
-.post-header h1 {
-  font-size: 1.8em;
-  color: #444;
-  font-family: Philosopher;
-  margin-bottom: 10px;
-}
-
-.post-header a {
-    color: headings-color;
-    font-size: 1em;
-    color: #444;
-}
-
-.post-header a:hover {
-  text-decoration: none;
-  border:none;
-}
-
-.post-time {
-  margin-top: 3px;
-  font-family: Philosopher;
-}
-
-.post-after {
-  padding-left: 40px;
-  margin-bottom: 12px;
-}
-
-.post-after ul {
-  clearfix()
-  margin: 0;
-  padding-left: 0;
-  list-style: none;
-}
-
-.post-after ul li {
-  float: left;
-  margin-right: 20px;
-}
-
-.post-after ul li a {
-  display: block;
-}
-
-.tags a {
-  color: #505050;
-  margin-right: 12px;
-  font-size: 0.6em;
-  padding: 5px 8px 2px 8px;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: 300ms background ease;
-  display: inline-block;
-  margin-bottom: 8px;
-  border-bottom: 3px solid #fa5305;
-  font-family: 'Liberation Sans', Helvetica, 'Helvetica Neue', sans-serif;
-}
-
-.tags a:hover {
-  color: #fff;
-  background-color: #fa5305;
-  border-bottom: 3px solid #fa5305;
-  text-decoration: none;
-}
-
-.one-post a, p a {
-  border-bottom: 1px solid #fa5305;
-  color: #505050;
-  padding-bottom: 2px;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-  border-bottom: 3px solid #fa5305;
-}
+  padding: 0; }
+  ul ul, ul ol, ol ul, ol ol {
+    margin: 10px 0 0 20px; }
+  ul li, ol li {
+    margin: 0 0 2px; }
+    ul li:last-of-type, ol li:last-of-type {
+      margin-bottom: 0; }
 
 blockquote {
-  padding: 0 0 0 15px;
+  border-left: 1px dotted #303030;
+  margin: 40px 0;
+  padding: 5px 30px; }
+  blockquote p {
+    color: #AEADAD;
+    display: block;
+    font-style: italic;
+    margin: 0;
+    width: 100%; }
+
+img {
+  display: block;
+  margin: 40px 0;
+  width: auto;
+  max-width: 100%; }
+
+pre {
+  background: #F1F0EA;
+  border: 1px solid #DDDBCC;
+  border-radius: 3px;
   margin: 0 0 20px;
-  border-left: 5px solid #fa5305;
-  font-family: Philosopher;
-  font-size: 18px;
-}
+  padding: 10px;
+  font-size: 16px; }
 
-.tag-list {
-  font-family: Philosopher;
-  max-width: 700px;
-  margin: auto;
-}
+hr {
+  border: none;
+  border-bottom: 1px dotted #303030;
+  margin: 45px 0; }
 
-.tag-list h1 {
-  max-width: 300px;
-  margin: auto;
-  padding-bottom: 2em;
-}
+table {
+  margin-bottom: 40px;
+  width: 100%; }
+  table tbody > tr:nth-child(odd) > td,
+  table tbody > tr:nth-child(odd) > th {
+    background-color: #f7f7f3; }
+  table th {
+    padding: 0 10px 10px;
+    text-align: left; }
+  table td {
+    padding: 10px; }
+  table tr {
+    border-bottom: 1px dotted #AEADAD; }
 
-.one-post {
-  padding-bottom: 30px;
-}
+::selection {
+  background: #FFF5B8;
+  color: #000;
+  display: block; }
 
-#pagination {
-  margin-top: 1.5em;
-}
+::-moz-selection {
+  background: #FFF5B8;
+  color: #000;
+  display: block; }
 
-#pagination a {
-  margin-top: 20px;
-  padding: 7px 20px 3px 20px;
-  width: 115px;
-  color: #646464;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: 'Liberation Sans', Helvetica, sans-serif;
-  border-bottom: 4px solid #646464;
-}
+.fluid-width-video-wrapper {
+  margin-bottom: 40px; }
 
-#pagination a:hover {
-  color: #fff;
-  background-color: #646464;
-  border-bottom: 4px solid #646464;
-  text-decoration: none;
-}
+.hidden {
+  text-indent: -9999px;
+  visibility: hidden;
+  display: none; }
 
-pre code {
-  display: block;
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+/* ============================================================ */
+/* General Appearance */
+/* ============================================================ */
+.container {
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  max-width: 889px; }
+
+#wrapper {
+  height: auto;
+  min-height: 100%;
+  /* This must be the same as the height of the footer */
+  margin-bottom: -265px; }
+  #wrapper:after {
+    content: "";
+    display: block;
+    /* This must be the same as the height of the footer */
+    height: 265px; }
+
+.button {
+  background: #303030;
+  border: none;
+  border-radius: 3px;
+  color: #FEFEFE;
   font-size: 14px;
-}
+  font-weight: 700;
+  padding: 10px 12px;
+  text-transform: uppercase; }
+  .button:hover {
+    background: #F03838; }
 
-.code {
-  font-family: 'Liberation Mono', Monaco, Consolas;
+.button-square {
+  background: #F03838;
+  color: #FFF;
+  float: left;
+  font-size: 17px;
+  margin: 0 0 0 10px;
+  padding: 3px 8px 4px; }
+  .button-square:hover {
+    background: #303030; }
+
+.error {
+  text-align: center; }
+
+.comments {
+  margin-top: 10px; }
+
+/* ============================================================ */
+/* Site Header */
+/* ============================================================ */
+.site-header {
+  padding: 40px 0 0;
+  overflow: auto;
+  text-align: center;
+  text-transform: uppercase; }
+
+.site-title-wrapper {
+  display: table;
+  margin: 0 auto; }
+
+.site-title {
+  float: left;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 0;
+  text-transform: uppercase; }
+  .site-title a {
+    float: left;
+    background: #F03838;
+    color: #FEFEFE;
+    padding: 5px 10px 6px; }
+    .site-title a:hover {
+      background: #303030; }
+
+.site-logo {
+  display: block; }
+  .site-logo img {
+    margin: 0; }
+
+.site-nav {
+  list-style: none;
+  margin: 28px 0 10px; }
+
+.site-nav-item {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0 10px; }
+  .site-nav-item a:hover {
+    color: #424242; }
+
+/* ============================================================ */
+/* Post */
+/* ============================================================ */
+#latest-post {
+  display: none; }
+
+.post-container {
+  margin: 0 40px; }
+
+.post-header {
+  border-bottom: 6px solid #303030;
+  margin: 0 0 20px;
+  padding: 0 0 20px;
+  text-align: center;
+  text-transform: uppercase; }
+
+.post-title,
+.page-title {
+  font-size: 52px;
+  font-weight: 700;
+  margin: 15px 0;
+  text-align: center;
+  text-transform: uppercase; }
+
+.page-title {
+  margin: 15px 40px; }
+
+.post-date,
+.blog-description {
+  color: #AEADAD;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1;
+  margin: 25px 0 0; }
+  .post-date a,
+  .blog-description a {
+    color: #AEADAD; }
+  .post-date a:hover,
+  .blog-description a:hover {
+    color: #F03838; }
+  .post-date:after,
+  .blog-description:after {
+    border-bottom: 1px dotted #303030;
+    content: "";
+    display: block;
+    margin: 40px auto 0;
+    width: 100px; }
+
+.post-content a:hover {
+  border-bottom: 1px dotted #F03838;
+  padding: 0 0 2px; }
+.post-content:last-child {
+  margin-bottom: 0; }
+
+.post-footer {
+  margin-top: 5px; }
+
+.post-tags,
+.share {
+  color: #AEADAD;
+  font-size: 14px; }
+  .post-tags span,
+  .share span {
+    font-weight: 600; }
+
+.post-tags {
+  float: left;
+  margin: 3px 0 0; }
+  .post-tags a:hover {
+    color: #303030; }
+
+.share {
+  float: right; }
+  .share a {
+    background: #F03838;
+    color: #FFF;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 5px;
+    padding: 5px 0 4px;
+    width: 30px;
+    text-align: center; }
+  .share a:hover {
+    background: #303030; }
+
+.post-navigation {
+  display: table;
+  margin: 70px auto 100px; }
+
+.newer-posts,
+.older-posts {
+  float: left;
+  background: #F03838;
+  color: #FEFEFE;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 0 5px;
+  padding: 5px 10px 6px;
+  text-transform: uppercase; }
+  .newer-posts:hover,
+  .older-posts:hover {
+    background: #303030; }
+
+.page-number {
+  display: none; }
+
+/* ============================================================ */
+/* Post Index */
+/* ============================================================ */
+.post-list {
+  list-style: none; }
+
+.post-stub {
+  border-bottom: 1px dotted #303030;
+  margin: 0;
+  position: relative; }
+  .post-stub:first-child {
+    padding-top: 0; }
+  .post-stub a {
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    display: block;
+    color: #424242;
+    padding: 20px 5px; }
+    .post-stub a:hover {
+      background: #FCF5F5;
+      color: #F03838;
+      padding: 20px 12px; }
+      .post-stub a:hover .post-stub-tag {
+        background: #F03838; }
+
+.post-stub-tag {
+  background: #303030;
+  border-radius: 3px;
+  color: #FFF;
+  float: right;
+  font-size: 10px;
+  margin: 7px 0 0;
+  padding: 0 5px;
+  text-transform: uppercase; }
+
+.post-stub-title {
+  display: inline-block;
+  margin: 0;
+  text-transform: none; }
+
+.post-stub-description {
+  display: inline-block;
+  margin: 0;
+  text-transform: none; }
+
+.post-stub-date {
+  display: inline-block; }
+  .post-stub-date:before {
+    content: "/ "; }
+
+.next-posts-link a,
+.previous-posts-link a {
   display: block;
-}
+  padding: 8px 11px; }
 
-code, pre {
-    font-family: 'Liberation Mono', Monaco, Consolas;
-    font-size: 14px;
-}
+/* ============================================================ */
+/* Author */
+/* ============================================================ */
+.author-profile {
+  margin: 0 40px; }
+  .author-profile:after {
+    border-bottom: 1px dotted #303030;
+    content: "";
+    display: block;
+    margin: 40px auto 0;
+    width: 100px; }
+
+.author-heading {
+  margin: 15px auto;
+  text-align: center;
+  width: 100%; }
+
+.author-avatar {
+  border-radius: 50px;
+  display: inline;
+  height: 50px;
+  margin: 5px 10px 0 0;
+  width: 50px;
+  vertical-align: middle; }
+
+.author-name {
+  display: inline;
+  font-size: 52px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: middle; }
+
+.author-meta {
+  color: #AEADAD;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1;
+  margin: 25px 0 0;
+  text-align: center;
+  text-transform: uppercase; }
+  .author-meta span {
+    display: inline-block;
+    margin: 0 10px 8px; }
+  .author-meta i {
+    margin-right: 8px; }
+  .author-meta a {
+    color: #AEADAD; }
+  .author-meta a:hover {
+    color: #F03838; }
+
+.author-bio {
+  margin: 20px auto 0;
+  text-align: center;
+  max-width: 700px; }
+
+/* ============================================================ */
+/* Footer */
+/* ============================================================ */
+.footer {
+  background: #303030;
+  color: #D3D3D3;
+  /*height: 265px;*/
+  margin-top: 95px;
+  overflow: auto; }
+  .footer .site-title-wrapper {
+    margin: 80px auto 35px; }
+  .footer .site-title a:hover,
+  .footer .button-square:hover {
+    background: #121212; }
+  .footer .button-jump-top {
+    font-size: 23px;
+    line-height: 1.1;
+    padding-top: 1px; }
+
+.footer-copyright {
+  color: #656565;
+  font-size: 14px;
+  margin: 0;
+  text-align: center;
+  text-transform: uppercase; }
+  .footer-copyright a {
+    color: #656565;
+    font-weight: 700; }
+    .footer-copyright a:hover {
+      color: #FEFEFE; }
+
+/* ============================================================ */
+/* NProgress */
+/* ============================================================ */
+#nprogress .bar {
+  background: #F03838; }
+
+#nprogress .peg {
+  box-shadow: 0 0 10px #F03838, 0 0 5px #F03838; }
+
+#nprogress .spinner-icon {
+  border-top-color: #F03838;
+  border-left-color: #F03838; }
+
+/* ============================================================ */
+/* Media Queries */
+/* ============================================================ */
+@media only screen and (max-width: 800px) {
+  .post-stub-tag {
+    display: none; } }
+@media only screen and (max-width: 600px) {
+  h1, h2 {
+    margin-bottom: 20px; }
+
+  p {
+    margin-bottom: 20px; }
+
+  ul, ol {
+    margin-bottom: 20px; }
+
+  img {
+    margin: 30px 0; }
+
+  blockquote {
+    margin: 30px 0; }
+
+  pre {
+    margin: 20px 0; }
+
+  hr {
+    margin: 35px 0; }
+
+  .site-header {
+    padding-top: 40px; }
+
+  .site-title {
+    float: none;
+    margin-bottom: 15px; }
+    .site-title a {
+      float: none; }
+
+  .site-nav-item {
+    display: block;
+    margin: 15px 0; }
+
+  .post-header {
+    margin-bottom: 20px;
+    padding-bottom: 20px; }
+
+  .post-title,
+  .page-title,
+  .author-name,
+  .author-heading {
+    font-size: 42px;
+    margin-top: 5px; }
+
+  .post-date,
+  .blog-description,
+  .author-meta {
+    margin-top: 20px; }
+    .post-date:after, .post-date:before,
+    .blog-description:after,
+    .blog-description:before,
+    .author-meta:after,
+    .author-meta:before {
+      margin-top: 30px; }
+
+  .author-profile:after, .author-profile:before {
+    margin-top: 20px; }
+
+  .post-stub-title {
+    display: block; }
+
+  .post-stub-date:before {
+    content: "";
+    display: block; }
+
+  .post-list {
+    margin-top: 20px; }
+
+  .post-container,
+  .post-list,
+  .author-profile {
+    margin-right: 25px;
+    margin-left: 25px; }
+
+  .post-tags {
+    width: 100%; }
+
+  .post-stub a,
+  .post-stub a:hover {
+    padding-top: 12px;
+    padding-bottom: 12px; }
+
+  .share {
+    float: left;
+    margin-top: 20px; }
+    .share a {
+      margin: 0 5px 0 0; }
+
+  .footer {
+    margin-top: 50px; } }
+@media only screen and (max-width: 400px) {
+  .site-header {
+    padding-top: 40px; }
+
+  .post-title,
+  .page-title,
+  .author-name,
+  .author-heading {
+    font-size: 30px;
+    line-height: 1.2; }
+
+  .post-date,
+  .blog-description,
+  .author-meta {
+    line-height: 1.6; }
+
+  .post-date,
+  .blog-description,
+  .author-meta {
+    margin-top: 10px; }
+    .post-date:after, .post-date:before,
+    .blog-description:after,
+    .blog-description:before,
+    .author-meta:after,
+    .author-meta:before {
+      margin-top: 20px; }
+
+  .author-profile:after, .author-profile:before {
+    margin-top: 10px; }
+
+  .post-container,
+  .post-list,
+  .author-profile {
+    margin-right: 15px;
+    margin-left: 15px; }
+
+  .author-avatar {
+    display: block;
+    margin: 0 auto 18px; }
+
+  .author-meta span {
+    display: block;
+    margin: 18px 0; }
+
+  .footer-copyright {
+    padding: 0 10px; } }
