--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,9 @@ table {
   text-align: center; }
 
 .comments {
-  margin-top: 10px; }
+      margin: 10px auto 0;
+      width: 600px;
+}
 
 /* ============================================================ */
 /* Site Header */
