--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ table {
 
 .post-navigation {
   display: table;
-  margin: 70px auto 100px; }
+  margin: 0 auto 0; }
 
 .newer-posts,
 .older-posts {
